RESOLVED FIXED222440
AX: VoiceOver announces grid as having "0 columns" and VoiceOver cannot enter the grid
https://bugs.webkit.org/show_bug.cgi?id=222440
Summary AX: VoiceOver announces grid as having "0 columns" and VoiceOver cannot enter...
Todd Kloots
Reported 2021-02-25 15:35:04 PST
Created attachment 421575 [details] Screen recording of the CodePen Steps to reproduce 1. Start VoiceOver 2. Go to https://codepen.io/toddlr/pen/NWbyPMN 3. Use VoiceOver navigation to move to the grid 4. Observe how VoiceOver announces the grid as a table with "0 columns" and you cannot use Shift-Control-Option-Down arrow to enter the grid
Attachments
Screen recording of the CodePen (2.27 MB, video/quicktime)
2021-02-25 15:35 PST, Todd Kloots
no flags
patch (7.47 KB, patch)
2021-02-26 00:44 PST, chris fleizach
ews-feeder: commit-queue-
patch (7.47 KB, patch)
2021-02-26 08:47 PST, chris fleizach
no flags
patch (8.13 KB, patch)
2021-02-26 11:30 PST, chris fleizach
no flags
Radar WebKit Bug Importer
Comment 1 2021-02-25 15:35:13 PST
chris fleizach
Comment 2 2021-02-26 00:44:49 PST
chris fleizach
Comment 3 2021-02-26 08:47:26 PST
chris fleizach
Comment 4 2021-02-26 11:30:51 PST
EWS
Comment 5 2021-03-01 17:52:43 PST
Committed r273715: <https://commits.webkit.org/r273715> All reviewed patches have been landed. Closing bug and clearing flags on attachment 421684 [details].
Note You need to log in before you can comment on or make changes to this bug.