AX: VoiceOver announces grid as having "0 columns" and VoiceOver cannot enter the grid https://bugs.webkit.org/show_bug.cgi?id=222440 <rdar://problem/74763792>

Reviewed by Zalan Bujtas.

Source/WebCore:

Support the ability of an ARIA table row to reference its cells through aria-owns.

Test: accessibility/aria-grid-with-aria-owns-rows.html

* accessibility/AccessibilityTableCell.cpp:
(WebCore::AccessibilityTableCell::ariaOwnedByParent const):
(WebCore::AccessibilityTableCell::parentObjectUnignored const):
(WebCore::AccessibilityTableCell::parentRow const):
* accessibility/AccessibilityTableCell.h:
* accessibility/AccessibilityTableRow.cpp:
(WebCore::AccessibilityTableRow::addChildren):

LayoutTests:

* accessibility/aria-grid-with-aria-owns-rows-expected.txt: Added.
* accessibility/aria-grid-with-aria-owns-rows.html: Added.


Canonical link: https://commits.webkit.org/234730@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@273715 268f45cc-cd09-0410-ab3c-d52691b4dbfc